Fix Java 21 API compatibility for Java 17
Replaced Java 21-specific APIs with Java 17 compatible equivalents:
- List.reversed() -> Collections.reverse() with new ArrayList
- Math.clamp() -> Math.min(Math.max())
- List.getFirst() -> List.get(0)
- List.removeFirst() -> List.remove(0)
- Particle.Spell -> Particle.DustOptions (API change)
- Removed particles that don't exist in 1.21.4: INFESTED, FIREFLY, FLASH, RAID_OMEN, TRIAL_OMEN

Files modified:
- HologramManager.java: Fixed reversed() call
- CrateManager.java: Fixed clamp() call
- ItemReward.java: Fixed getFirst() call
- PlaceholderHook.java: Fixed getFirst() with null safety
- AbstractSpinner.java: Fixed removeFirst() call
- CrateParticleDialog.java: Fixed Particle.Spell and enum particles

Now compatible with Java 17 while maintaining all functionality.